# philharmonic-connector-impl-embed

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
src/: config.rs  error.rs  lib.rs  model.rs  pool.rs  request.rs  response.rs
tests/: README.md  batch_inference.rs  batch_size_enforcement.rs  common.rs  deterministic_output.rs  external_data_loads.rs  inference_produces_correct_shape.rs  l2_normalized.rs  semantic_similarity.rs
